Chaned structure and changes

--- a/web/template/login.html
+++ b/web/template/login.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<h1>Welcome. Please Login.</h1>
-<body>
-    <form action="/login" method="post">
-        Username:<input type="text" name="username" id="username">
-        Password:<input type="password" name="password" id="password">
-        <br>
-        <input type="submit" value="Login">    
-    </form>
-</body>
+<html>
+    <head>
+    <title></title>
+    </head>
+    <body>
+        <h1>Please Login</h1>
+        <h2 style="color:red">{{.Error}}</h2>
+        <form action="/login" method="post">
+            Email:<input type="email" name="username" required>
+            Password:<input type="password" name="password" required>
+            <input type="submit" value="Login">
+        </form>
+    <button onclick=goTLogin()>Register</button>
+    </body>
+    <script>
+        function goTLogin() {
+            window.location.href = '/register';
+        }
+    </script>
+</html>
