--- a/web/template/register.html
+++ b/web/template/register.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<h1>Welcome. Please Register yourself.</h1>
-<body>
-    <form action="/register" method="post">
-        Username:<input type="text" name="username" id="username">
-        Password:<input type="password" name="password" id="password">
-        Confirm Password:<input type="password" name="confirm_password" id="confirm_password">
-        <br>
-        <input type="submit" value="Register">    
-    </form>
-</body>
+<html>
+    <head>
+    <title></title>
+    </head>
+    <body>
+        <h1>User Registration</h1>
+        <h2 style="color:red">{{.Error}}</h2>
+        <form action="/register" method="post">
+            Email:<input type="email" name="username" required>
+            Password:<input type="password" name="password" required>
+            <input type="submit" value="Register">
+        </form>
+    </body>
+</html>
