implemented following feature

--- a/web/template/profile.html
+++ b/web/template/profile.html
@@ -6,7 +6,7 @@
         <h1>Hi User</h1>
         <h2 style="color:red">{{.Error}}</h2>
         <h2 style="color: green">{{.Success}}</h2>
-        <form action="/follow" method="get">
+        <form action="/follow" method="post">
             <button type="submit">Follow</button>
         </form>
         <form action="/unfollow" method="get">
