--- a/web/template/unfollow.html
+++ b/web/template/unfollow.html
@@ -6,11 +6,11 @@
         <h1> Hi User</h1>
         <h2 style="color:red">{{.Error}}</h2>
         <h2 style="color: green">{{.Success}}</h2>
-        <h3>Click on the user you want to follow. </h3>
+        <h3>Click on the user you want to Unfollow. </h3>
         <!-- Iterate through the list of strings. -->
         {{range .Users }} 
-            <form action="/startfollow" method="post">
-                <button type="submit" name="startfollow" value="{{.}}">{{.}}</button>
+            <form action="/startunfollow" method="post">
+                <button type="submit" name="unfollow" value="{{.}}">{{.}}</button>
             </form>
         {{end}}
 
