--- a/web/template/profile.html
+++ b/web/template/profile.html
@@ -9,7 +9,7 @@
         <form action="/follow" method="post">
             <button type="submit">Follow</button>
         </form>
-        <form action="/unfollow" method="get">
+        <form action="/unfollow" method="post">
             <input type="submit" value="Unfollow">
          </form>
          <form action="/followers" method="get">
