--- a/web/template/profile.html
+++ b/web/template/profile.html
@@ -9,16 +9,16 @@
         <form action="/follow" method="post">
             <button type="submit">Follow</button>
         </form>
-        <form action="/unfollow" method="post">
-            <input type="submit" value="Unfollow">
-         </form>
-         <form action="/followers" method="get">
-            <input type="submit" value="Followers">
+        <form action="/unfollow" method="get">
+          <button type="submit">Unfollow</button>
         </form>
+         <!-- <form action="/followers" method="post">
+            <input type="submit" value="Followers">
+        </form> -->
          <form action="/feed" method="get">
             <input type="submit" value="Feed">
           </form>
-         <form action="/signout" method="post">
+         <form action="/logout" method="post">
             <input type="submit" value="Signout">
           </form>
           <form action="/tweet" method="post">
