--- a/web/template/index.html
+++ b/web/template/index.html
@@ -2,6 +2,6 @@
 <h1>Welcome. Please Register yourself.</h1>
 
 <body>
-    <p><a href="/login">Log In</a></p>
-    <p><a href="/register">Sign Up</a></p>
+    <p><a href="https://anubis-lms.io/ide/proxy/9000/login">Log In</a></p>
+    <p><a href="https://anubis-lms.io/ide/proxy/9000/register">Sign Up</a></p>
 </body>
